--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,51 +1,2 @@
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:domain" content="minamichihaya.github.io">
-  <meta name="twitter:site" content="mayuragicenter">
-  <meta name="twitter:creator" content="pasberth">
-  <meta name="twitter:title" content="ふたりのハードプロブレム">
-  <meta name="twitter:description" content=" 機械になりたい、って思った。 いまでもそう思ってる。">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/twittercard.png">
-  <meta name="twitter:app:name:iphone" content="">
-  <meta name="twitter:app:name:ipad" content="">
-  <meta name="twitter:app:name:googleplay" content="">
-  <meta name="twitter:app:url:iphone" content="">
-  <meta name="twitter:app:url:ipad" content="">
-  <meta name="twitter:app:url:googleplay" content="">
-  <meta name="twitter:app:id:iphone" content="">
-  <meta name="twitter:app:id:ipad" content="">
-  <meta name="twitter:app:id:googleplay" content="">
-  <link rel="stylesheet" type="text/css" href="desktop.css" />
-  <link rel="stylesheet" type="text/css" href="portrait.css" />
-  <link rel="stylesheet" type="text/css" href="landscape.css" />
-  <title>ふたりのハードプロブレム</title>
-  <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
-</head>
-<body id="page" class="index">
-  <div v-component="hpft-main-header"></div>
-
-  <div id="main-contents" class="contents">
-    <img class="hpft-cover" id="cover" src="../img/title0.png"/>
-    <div id="main-hpft-index" v-component="hpft-index"></div>
-
-<figure class="link">
-<li class="link"><a href="https://minamichihaya.github.io/novel.html#hardproblem"><img src="../img/mayuragicenter_banner.png"></a></li>
-<li class="link"><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></li>
-<li class="link"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></li>
-<li class="link"><a href="http://ncode.syosetu.com/n9592cf/" target="_blank"><img src="../img/banner_narou.gif"></li>
-</figure>
-
-
-  </div>
-
- </body>
-</html>
-
-<script src="cookie.js"></script>
-<script src="config.js"></script>
-<script src="../vendor/vue.min.js"></script>
-<script src="components.js"></script>
-<script src="page.js"></script>
+ただいま改装工事中。<br>
+もうちょっと待って
