--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -1,47 +1,2 @@
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:domain" content="minamichihaya.github.io">
-  <meta name="twitter:site" content="mayuragicenter">
-  <meta name="twitter:creator" content="pasberth">
-  <meta name="twitter:title" content="Metastable3">
-  <meta name="twitter:description" content=" ひとつ、ふたつ、たくさん――">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/twittercard_ms3.png">
-  <meta name="twitter:app:name:iphone" content="">
-  <meta name="twitter:app:name:ipad" content="">
-  <meta name="twitter:app:name:googleplay" content="">
-  <meta name="twitter:app:url:iphone" content="">
-  <meta name="twitter:app:url:ipad" content="">
-  <meta name="twitter:app:url:googleplay" content="">
-  <meta name="twitter:app:id:iphone" content="">
-  <meta name="twitter:app:id:ipad" content="">
-  <meta name="twitter:app:id:googleplay" content="">
-  <link rel="stylesheet" type="text/css" href="desktop.css" />
-  <link rel="stylesheet" type="text/css" href="portrait.css" />
-  <link rel="stylesheet" type="text/css" href="landscape.css" />
-  <title>Metastable3</title>
-  <link rel="shortcut icon" href="../img/icon_metastable3.png" type="image/png">
-</head>
-<body id="page" class="index">
-  <div v-component="metastable-main-header"></div>
-
-  <div id="main-contents" class="contents">
-    <img class="metastable-cover" id="cover" src="../img/ms3_title0.png"/>
-    <div id="main-metastable-index" v-component="metastable-index"></div>
-
-      <figure class="link">
-        <li class="link"><a href="https://minamichihaya.github.io/novel.html#metastable3"><img src="../img/mayuragicenter_banner.png"></a></a></li>
-        <li class="link"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></li>
-        <li class="link"><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></li>
-      </figure>
-
-</body>
-</html>
-
-<script src="cookie.js"></script>
-<script src="config.js"></script>
-<script src="../vendor/vue.min.js"></script>
-<script src="components.js"></script>
-<script src="page.js"></script>
+ただいま改装工事中。<br>
+もうちょっと待って
