新サイトへ誘導

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,2 +1,8 @@
-ただいま改装工事中。<br>
-もうちょっと待って
+<html>
+    <head>
+        <meta http-equiv="refresh" content="3;URL=https://mayuragicenter.github.io/hardproblem/" />
+    </head>
+    <body>
+        <a href="https://mayuragicenter.github.io/hardproblem/">自動的にジャンプします。</a>
+    </body>
+</html>
