リファラ調査

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<script type="text/javascript" src="tracking.js"></script>
+	</head>
 	<body>
-		<script type="text/javascript">
-			location.href = "https://mayuragicenter.github.io/hardproblem/";
-		</script>
 	</body>
 </html>
