移動しました

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv=”Cache-Control” content=”no-cache”>
 		<script type="text/javascript" src="tracking.js"></script>
 	</head>
 	<body>
+		移動しました
 	</body>
 </html>
