移動しました

--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv=”Cache-Control” content=”no-cache”>
-		<script type="text/javascript" src="tracking.js"></script>
+		<script type="text/javascript" src="../tracking.js"></script>
 	</head>
 	<body>
 	</body>
